feat: 코인 탐지 리스트 성능 개선, 요약 정보 거래소 정보 구분하도록 수정